force-app/main/default/objects/Wear_Test__c/Wear_Test__c.object-meta.xml
<CustomObject>
    <description>This is an object to store the wear tests.
This object is being replaced by the WEATT Replacement Project</description>
    <label>Wear Test OLD</label>
    <nameField>
        <label>Weat Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wear Tests OLD</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>