force-app/main/default/objects/Wear_Test__c/fields/Decision_Rating__c.field-meta.xml
<CustomField>
    <fullName>Decision_Rating__c</fullName>
    <description>This field will store the decision rating for the wear test.</description>
    <inlineHelpText>Please enter the decision rating for the wear test.</inlineHelpText>
    <label>Decision Rating</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Wear_Test_Decision__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>5 - Excellent</fullName>
            </value>
            <value>
                <fullName>4 - Very Good</fullName>
            </value>
            <value>
                <fullName>3 - Good</fullName>
            </value>
            <value>
                <fullName>2 - Fair</fullName>
            </value>
            <value>
                <fullName>1 - Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>