force-app/main/default/objects/Wear_Test__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>This is the end date of the wear test.</description>
    <inlineHelpText>Please enter the end date of the wear test.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>