force-app/main/default/objects/Wear_Test__c/fields/Evaluation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Comments__c</fullName>
    <description>This field is for evaluation comments.</description>
    <inlineHelpText>Please enter any evaluation comments for the wear test.</inlineHelpText>
    <label>Evaluation Comments</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>