force-app/main/default/objects/Wear_Test__c/fields/Footwear_Specs__c.field-meta.xml
<CustomField>
    <fullName>Footwear_Specs__c</fullName>
    <description>This is to define the minimum Footwear Specifications.</description>
    <inlineHelpText>Please select the minimum Footwear Specifications.</inlineHelpText>
    <label>Footwear Specs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All-Leather Upper</fullName>
            </value>
            <value>
                <fullName>Any Safety Toe</fullName>
            </value>
            <value>
                <fullName>Chemical-Resistant</fullName>
            </value>
            <value>
                <fullName>Color - Black Only</fullName>
            </value>
            <value>
                <fullName>Color - Brown Only</fullName>
            </value>
            <value>
                <fullName>Electrical Hazard (EH)</fullName>
            </value>
            <value>
                <fullName>Electro-Static Dissappative (ESD)</fullName>
            </value>
            <value>
                <fullName>Heel - 90 Degree</fullName>
            </value>
            <value>
                <fullName>Heel Height - 1/2&quot; Minimum</fullName>
            </value>
            <value>
                <fullName>Heel Height - 3/4&quot; Minimum</fullName>
            </value>
            <value>
                <fullName>Heel Height - 5/8&quot; Minimum</fullName>
            </value>
            <value>
                <fullName>Heel - Yes</fullName>
            </value>
            <value>
                <fullName>Height: 6&quot; Minimum</fullName>
            </value>
            <value>
                <fullName>Height: 8&quot; Minimum</fullName>
            </value>
            <value>
                <fullName>Height: Over the Ankle</fullName>
            </value>
            <value>
                <fullName>Insulated (INS)</fullName>
            </value>
            <value>
                <fullName>Lace-Up Closure</fullName>
            </value>
            <value>
                <fullName>Metatarsal (MT) - Any</fullName>
            </value>
            <value>
                <fullName>Metatarsal (MT) - External</fullName>
            </value>
            <value>
                <fullName>Metatarsal (MT) - Internal</fullName>
            </value>
            <value>
                <fullName>No Athletic Styles</fullName>
            </value>
            <value>
                <fullName>No Chukkas</fullName>
            </value>
            <value>
                <fullName>No Hiker Styles</fullName>
            </value>
            <value>
                <fullName>No Slip-Ons</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas Resistant Sole</fullName>
            </value>
            <value>
                <fullName>Pull-On</fullName>
            </value>
            <value>
                <fullName>Puncture-Resistant (PR)</fullName>
            </value>
            <value>
                <fullName>Shank</fullName>
            </value>
            <value>
                <fullName>Slip-Resistant (Any)</fullName>
            </value>
            <value>
                <fullName>Slip-Resistant (Best)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>