force-app/main/default/objects/Wear_Test__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>This field will store the group name.</description>
    <inlineHelpText>Please enter the group that is taking the test.  Ex. Warehouse, Truck Driver, Manufacturing, Maintenance, Office, etc.</inlineHelpText>
    <label>Group Name</label>
    <type>TextArea</type>
</CustomField>