force-app/main/default/objects/Wear_Test__c/fields/Participant_Email__c.field-meta.xml
<CustomField>
    <fullName>Participant_Email__c</fullName>
    <description>This is to store the Participant Email.</description>
    <inlineHelpText>Please enter the Participant Email.</inlineHelpText>
    <label>Participant Email</label>
    <type>Email</type>
</CustomField>