force-app/main/default/objects/Wear_Test__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <description>This is for participant name.</description>
    <inlineHelpText>Please enter Participant Name.</inlineHelpText>
    <label>Participant Name</label>
    <type>TextArea</type>
</CustomField>