force-app/main/default/objects/Wear_Test__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>This is for the Wear Test Stage.</description>
    <inlineHelpText>Please enter the wear test stage.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Identified</fullName>
                <default>true</default>
                <label>Product Identified</label>
            </value>
            <value>
                <fullName>Product Delivered</fullName>
            </value>
            <value>
                <fullName>Performance Evaluated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>