force-app/main/default/objects/Wear_Test__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>This is the start date of the wear test.</description>
    <inlineHelpText>Please enter the start date of the wear test.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>