force-app/main/default/objects/Wear_Test__c/fields/Style_Description__c.field-meta.xml
<CustomField>
    <fullName>Style_Description__c</fullName>
    <description>This is to capture the style description.</description>
    <inlineHelpText>Please enter the style description.</inlineHelpText>
    <label>Style Description</label>
    <type>TextArea</type>
</CustomField>