force-app/main/default/objects/Wear_Test__c/fields/Style_Number__c.field-meta.xml
<CustomField>
    <fullName>Style_Number__c</fullName>
    <description>This is for the Style number.</description>
    <inlineHelpText>Please enter the style number.</inlineHelpText>
    <label>Style Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>