force-app/main/default/objects/Wear_Test__c/fields/Test_Category__c.field-meta.xml
<CustomField>
    <fullName>Test_Category__c</fullName>
    <description>This is to capture the wear test category.</description>
    <inlineHelpText>Please enter the wear test category.</inlineHelpText>
    <label>Test Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Food processing</fullName>
            </value>
            <value>
                <fullName>Gas &amp; Oil</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>