force-app/main/default/objects/Wear_Test__c/fields/Test_Objective__c.field-meta.xml
<CustomField>
    <fullName>Test_Objective__c</fullName>
    <description>This is to capture the test objective.</description>
    <inlineHelpText>Please enter the test objective.</inlineHelpText>
    <label>Test Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>