force-app/main/default/objects/Wear_Test__c/fields/Usage_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Usage_Requirements__c</fullName>
    <description>This is to capture the Usage Requirements.</description>
    <inlineHelpText>Please enter the Usage Requirements.</inlineHelpText>
    <label>Usage Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>