force-app/main/default/objects/Wear_Test__c/fields/Wear_Test_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Wear_Test_Attributes__c</fullName>
    <description>This is the Wear Test Attributes.</description>
    <inlineHelpText>Please select the wear test attributes.</inlineHelpText>
    <label>Wear Test Attributes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comfort</fullName>
            </value>
            <value>
                <fullName>Durability</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>Slip - Resistant</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>