force-app/main/default/objects/Wear_Test__c/fields/Wear_Test_Decision__c.field-meta.xml
<CustomField>
    <fullName>Wear_Test_Decision__c</fullName>
    <description>This is to capture the final Wear Test decision.</description>
    <inlineHelpText>Please select the reason for the final Wear Test decision.</inlineHelpText>
    <label>Wear Test Decision</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>