force-app/main/default/objects/Wear_Test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Style_Number__c</columns>
    <columns>Stage__c</columns>
    <columns>Test_Category__c</columns>
    <columns>Wear_Test_Decision__c</columns>
    <columns>Decision_Rating__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>